sistemato stile tasto download,aggiunto inserimento celle(per ora senza factory)

--- a/src/main/webapp/assets/style.css
+++ b/src/main/webapp/assets/style.css
@@ -7,7 +7,7 @@
 #paper{
     width: 60%;
     margin-left: auto;
-    max-height: 800px;
+    max-height: calc(100% - 0px);
     /* margin: auto; */
     overflow: scroll;
     border: #655f64;
@@ -30,7 +30,8 @@
 
 
 .main{
-    height: 800px;
+    height: calc(100% - 64px);
+    max-height: calc(100% - 64px);
 }
 .demo-cards{
     height: 100%;
@@ -50,4 +51,45 @@
 }
 .comp{
     height: 100%;
+}
+
+.upload{
+    cursor: pointer;
+}
+input[type="file"] {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+}
+
+.demo-avatar {
+    width: 48px;
+    height: 48px;
+    border-radius: 24px;
+}
+.demo-drawer-header {
+    box-sizing: border-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    padding: 16px;
+    height: 151px;
+}
+#components{
+    overflow-y: scroll;
+    height: calc(100% - 64px);
+}
+.newcompbt{
+    margin-bottom: 0.2em;
 }
