--- a/src/main/webapp/assets/style.css
+++ b/src/main/webapp/assets/style.css
@@ -7,6 +7,7 @@
 #paper{
     width: 60%;
     margin-left: auto;
+    height:calc(100% - 0px);
     max-height: calc(100% - 0px);
     /* margin: auto; */
     overflow: scroll;
@@ -92,4 +93,8 @@ input[type="file"] {
 }
 .newcompbt{
     margin-bottom: 0.2em;
+}
+#details{
+    overflow-y: scroll;
+    height: calc(100% - 64px);
 }
