--- a/src/main/webapp/assets/style.css
+++ b/src/main/webapp/assets/style.css
@@ -113,3 +113,12 @@ input[type="file"] {
     overflow-y: scroll;
     height: calc(100% - 64px);
 }
+#switchtoclass{
+    position: fixed;
+    display: block;
+    right: 0;
+    bottom: 0;
+    margin-right: 40px;
+    margin-bottom: 40px;
+    z-index: 900;
+}
