button torna al diagramma delle classi visibile solamente nei diagrammi delle attività

--- a/src/main/webapp/assets/style.css
+++ b/src/main/webapp/assets/style.css
@@ -115,7 +115,7 @@ input[type="file"] {
 }
 #switchtoclass{
     position: fixed;
-    display: block;
+    display: none;
     right: 0;
     bottom: 0;
     margin-right: 40px;
