aggiustate values elementi

--- a/src/main/webapp/assets/style.css
+++ b/src/main/webapp/assets/style.css
@@ -122,3 +122,6 @@ input[type="file"] {
     margin-bottom: 40px;
     z-index: 900;
 }
+input[type=checkbox]:checked ~ .switch{
+    display: none;
+}
