--- a/src/main/webapp/assets/style.css
+++ b/src/main/webapp/assets/style.css
@@ -125,3 +125,34 @@ input[type="file"] {
 input[type=checkbox]:checked ~ .switch{
     display: none;
 }
+.togglable{
+    width: 90%;
+    background-color: lightgray;
+    margin: 1em 2em 0em 0em;
+    cursor: pointer;
+    font-size: 1.5em;
+    font-weight: 300;
+    font-family: "Roboto","Helvetica","Arial",sans-serif;
+}
+.togglable:after{
+
+    content: "\02C5";
+}
+.add,.switch{
+    margin-bottom: 0.3em;
+    border: none;
+    background-color: #4db6ac;
+    display: inline-block;
+    padding: 1em 2em;
+    border-radius: 3px;
+    cursor: pointer;
+    color: white;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.toggle{
+    /*display: none;*/
+}
+.propcontainer{
+    background-color: lightgray;
+    margin: 0.3em;
+}
