sistemata grafica celle classi e sistemate opzioni panzoom

--- a/src/main/webapp/js/views/templates.html
+++ b/src/main/webapp/js/views/templates.html
@@ -42,9 +42,9 @@
                     <option value="protected"
                     <%if(attributes[attr].visibility=="protected"){%> selected <% }
                     %>>Protected</option>
-                    <option value="package"
+                    <!--<option value="package"
                     <%if(attributes[attr].visibility=="package"){%> selected <% }
-                    %>>Package</option>
+                    %>>Package</option>-->
                     <option value="public"
                     <%if(attributes[attr].visibility=="public"){%> selected <% } %>>Public</option>
 
@@ -97,8 +97,8 @@
                     <option value="protected"
                     <%if(methods[met].visibility=="protected"){%> selected <% }
                     %>>Protected</option>
-                    <option value="package"
-                    <%if(methods[met].visibility=="package"){%> selected <% } %>>Package</option>
+                    <!--<option value="package"
+                    <%if(methods[met].visibility=="package"){%> selected <% } %>>Package</option>-->
                     <option value="public"
                     <%if(methods[met].visibility=="public"){%> selected <% } %>>Public</option>
 
@@ -213,8 +213,8 @@
                     <option value="protected"
                     <%if(methods[met].visibility=="protected"){%> selected <% }
                     %>>Protected</option>
-                    <option value="package"
-                    <%if(methods[met].visibility=="package"){%> selected <% } %>>Package</option>
+                    <!--<option value="package"
+                    <%if(methods[met].visibility=="package"){%> selected <% } %>>Package</option>-->
                     <option value="public"
                     <%if(methods[met].visibility=="public"){%> selected <% } %>>Public</option>
 
