--- a/src/main/webapp/js/views/templates.html
+++ b/src/main/webapp/js/views/templates.html
@@ -324,7 +324,7 @@
     <div class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
     >
         <label class="mdl-textfield__label" for="name">Codice</label>
-        <input class="edit mdl-textfield__input" value="<%= code %>" name="code">
+        <textarea class="edit mdl-textfield__input" value="<%= code %>" rows=3 name="code"></textarea>
     </div>
 
     <div class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
