--- a/src/main/webapp/assets/style2.css
+++ b/src/main/webapp/assets/style2.css
@@ -65,7 +65,6 @@ display: none;
 .prop {
     height: 100%;
     margin-left: 0.2em;
-    padding-left: 0.5em;
 }
 
 .demo-content {
@@ -146,6 +145,7 @@ input[type="file"] {
 #details {
     overflow-y: scroll;
     height: calc(100% - 64px);
+    padding: 20px 0.5em;
 }
 
 #switchtoclass {
