--- a/src/main/webapp/js/views/templates.html
+++ b/src/main/webapp/js/views/templates.html
@@ -348,7 +348,7 @@
 <script type="text/template" id="activity.HxIf">
     <div class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
     >
-        <label class="mdl-textfield__label" for="condition">Variable</label>
+        <label class="mdl-textfield__label" for="condition">Condition</label>
         <input class="edit mdl-textfield__input" value="<%= condition %>" name="condition">
     </div>
 
@@ -407,7 +407,7 @@
 <script type="text/template" id="activity.HxWhile">
     <div class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
          id="vardiv">
-        <label class="mdl-textfield__label" for="condition">Variable</label>
+        <label class="mdl-textfield__label" for="condition">Condition</label>
         <input class="edit mdl-textfield__input" value="<%= condition %>" name="condition">
     </div>
 
